@@ -1,3 +1,7 @@
+git HEAD
+
+    * HAFAS->new: Add arrival option
+
 Travel::Routing::DE::HAFAS 0.02 - Sat Nov 25 2023
 
     * hafas: Add -f / --full-route option
